tests/baselines/reference/staticsInAFunction.errors.txt
==== tests/cases/compiler/staticsInAFunction.ts (14 errors) ====
    function boo{
                ~
!!! error TS1005: '(' expected.
       static test()
       ~~~~~~
!!! error TS1008: Unexpected token; 'statement' expected.
              ~~~~
!!! error TS2095: Could not find symbol 'test'.
       static test(name:string)
       ~~~~~~
!!! error TS1008: Unexpected token; 'statement' expected.
                       ~
!!! error TS1005: ',' expected.
              ~~~~
!!! error TS2095: Could not find symbol 'test'.
                   ~~~~
!!! error TS2095: Could not find symbol 'name'.
                        ~~~~~~
!!! error TS2095: Could not find symbol 'string'.
       static test(name?:any){}
       ~~~~~~
!!! error TS1008: Unexpected token; 'statement' expected.
                        ~
!!! error TS1003: Identifier expected.
                             ~
!!! error TS1005: ';' expected.
              ~~~~
!!! error TS2095: Could not find symbol 'test'.
                   ~~~~
!!! error TS2095: Could not find symbol 'name'.
                         ~~~
!!! error TS2095: Could not find symbol 'any'.
    }
    